Modificaciones para las pantallas de imagenes banners y de articulos

--- a/AdminAgropet/Web.config
+++ b/AdminAgropet/Web.config
@@ -52,6 +52,8 @@
 
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+    <add key="rutaImagenesBanners" value="C:\Temporal\Repositorio\ImagenesBanner\"/>
+    <add key="rutaImagenesArticulos" value="C:\Temporal\Repositorio\ImagenesArticulos\"/>
   </appSettings>  
 
 </configuration>
