--- a/AdminAgropet/AdminAgropet.csproj
+++ b/AdminAgropet/AdminAgropet.csproj
@@ -69,6 +69,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="ControlWEB\Comun\wucDropDownEntidadNegocio.ascx" />
+    <Content Include="CSS\Paginacion.css" />
     <Content Include="CSS\StyleDateTimePicker.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="frmABCClientes.aspx" />
