--- a/AdminAgropet/AdminAgropet.csproj
+++ b/AdminAgropet/AdminAgropet.csproj
@@ -69,6 +69,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="ControlWEB\Comun\wucDropDownEntidadNegocio.ascx" />
+    <Content Include="CSS\EstiloCheckBox.css" />
     <Content Include="CSS\Paginacion.css" />
     <Content Include="CSS\StyleDateTimePicker.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -214,11 +215,13 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
+    <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
