--- a/AdminAgropet/packages.config
+++ b/AdminAgropet/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net45" />
 </packages>
