Se cambia la solicion a framework 4 y se aplican los estilos a la pagina web de menus

--- a/AdminAgropet/Web.config
+++ b/AdminAgropet/Web.config
@@ -1,59 +1,50 @@
 ﻿<?xml version="1.0"?>
-
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
+  <system.web>
+    <trust level="Full"/>
+    <compilation debug="true" targetFramework="4.0"/>
+    <httpRuntime/>
+    <customErrors mode="Off" defaultRedirect="frmError.aspx">
+      <error statusCode="404" redirect="frmSinPermiso.aspx"/>
+    </customErrors>
+    <authentication mode="Windows">
+      <forms name=".ASPXFORMS" defaultUrl="frmMenuModuloAdmin.aspx" loginUrl="frmLoginModuloAdmin.aspx" requireSSL="false" protection="All" path="/" timeout="30"/>
+    </authentication>
+  </system.web>
+  <location path="Imagenes">
     <system.web>
-      <trust level="Full"/>
-      <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-      
-      <customErrors mode="Off" defaultRedirect="frmError.aspx">
-        <error statusCode="404" redirect="frmSinPermiso.aspx"/>
-      </customErrors>
-
-      <authentication mode="Windows">
-        <forms name=".ASPXFORMS" defaultUrl="frmMenuModuloAdmin.aspx" loginUrl="frmLoginModuloAdmin.aspx" requireSSL="false" protection="All" path="/" timeout="30"/>
-      </authentication>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
     </system.web>
-
-    <location path="Imagenes">
-      <system.web>
-        <authorization>
-          <allow users="*"/>
-        </authorization>
-      </system.web>
-    </location>
-    <location path="JS">
-      <system.web>
-        <authorization>
-          <allow users="*"/>
-        </authorization>
-      </system.web>
-    </location>
-    <location path="CSS">
-      <system.web>
-        <authorization>
-          <allow users="*"/>
-        </authorization>
-      </system.web>
-    </location>
-
+  </location>
+  <location path="JS">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="CSS">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
   <connectionStrings>
     <clear/>
     <add name="ConnMySQLPruebas" connectionString="Server=localhost;database=agropet_web;Uid=root;pwd=4dm1nBd*;"/>
     <add name="ConnMySQLProdEnv" connectionString="Server=localhost;database=agropet_web;Uid=root;pwd=4dm1nBd*;"/>
-    <!-- Prod <add name="ConnMySQLAgropet" connectionString="Server=192.168.1.15;database=WebSites;Uid=agropet;pwd=SqlSvr2016;" providerName="MySql.Data.MySqlClient"/>-->
-    <add name="ConnMySQLAgropet" connectionString="Server=localhost;database=WebSites;Uid=root;pwd=admin;" providerName="MySql.Data.MySqlClient" />
+    <!--<add name="ConnMySQLAgropet" connectionString="Server=192.168.1.15;database=WebSites;Uid=Agropet;pwd=SqlSrv2016;" providerName="MySql.Data.MySqlClient"/>-->
+    <add name="ConnMySQLAgropet" connectionString="Server=localhost;database=WebSites;Uid=root;pwd=admin;" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
-
   <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
     <add key="rutaImagenesBanners" value="C:\Temporal\Repositorio\ImagenesBanner\"/>
     <add key="rutaImagenesArticulos" value="C:\Temporal\Repositorio\ImagenesArticulos\"/>
-  </appSettings>  
-
+  </appSettings>
 </configuration>
