--- a/AdminAgropet/Web.config
+++ b/AdminAgropet/Web.config
@@ -8,8 +8,8 @@
     <trust level="Full"/>
     <compilation debug="true" targetFramework="4.0"/>
     <httpRuntime/>
-    <customErrors mode="Off" defaultRedirect="frmError.aspx">
-      <error statusCode="404" redirect="frmSinPermiso.aspx"/>
+    <customErrors mode="On" defaultRedirect="~/frmError.aspx">
+      <error statusCode="404" redirect="~/frmError.aspx"/>
     </customErrors>
     <authentication mode="Windows">
       <forms name=".ASPXFORMS" defaultUrl="frmMenuModuloAdmin.aspx" loginUrl="frmLoginModuloAdmin.aspx" requireSSL="false" protection="All" path="/" timeout="30"/>
