--- a/AgropPET.Negocio/AgropPET.Negocio.csproj
+++ b/AgropPET.Negocio/AgropPET.Negocio.csproj
@@ -42,9 +42,11 @@
   <ItemGroup>
     <Compile Include="Catalogos\CatalogoArticulos.cs" />
     <Compile Include="Catalogos\CatalogoBR.cs" />
+    <Compile Include="Catalogos\CatalogoCliente.cs" />
     <Compile Include="Catalogos\CatalogoImagenesArticulos.cs" />
     <Compile Include="Catalogos\CatalogoImagenesBanners.cs" />
     <Compile Include="Catalogos\CatalogosExtBR.cs" />
+    <Compile Include="Catalogos\CatalogoUsuario.cs" />
     <Compile Include="Eventos\CatalogoEventHandlers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguridad\NegocioMenuWeb.cs" />
