--- a/AdminAgropet/Web.config
+++ b/AdminAgropet/Web.config
@@ -37,13 +37,13 @@
     </system.web>
   </location>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=DESKTOP-8EK5U5C\SQLEXPRESS;Initial Catalog=Petcetera;User ID=sa;Password=admin;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <!--<add name="Default" connectionString="Data Source=Zeus;Initial Catalog=Petcetera;User ID=ali.escamilla;Password=3sc4m1ll4;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="Default" connectionString="Data Source=DESKTOP-8EK5U5C\SQLEXPRESS;Initial Catalog=Petcetera;User ID=sa;Password=admin;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <add name="Default" connectionString="Data Source=192.168.1.12;Initial Catalog=Petcetera;User ID=ali.escamilla;Password=3sc4m1ll4;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="rutaImagenesBanners" value="C:\Temporal\Repositorio\ImagenesBanner\"/>
-    <add key="rutaImagenesArticulos" value="C:\Temporal\Repositorio\ImagenesArticulos\"/>
-    <!--<add key="rutaImagenesBanners" value="C:\inetpub\wwwroot\eShop\ImagenesBanner\" />
-    <add key="rutaImagenesArticulos" value="C:\inetpub\wwwroot\eShop\ImagenesArticulos\" />-->
+    <!--<add key="rutaImagenesBanners" value="C:\Temporal\Repositorio\ImagenesBanner\"/>
+    <add key="rutaImagenesArticulos" value="C:\Temporal\Repositorio\ImagenesArticulos\"/>-->
+    <add key="rutaImagenesBanners" value="C:\inetpub\wwwroot\eShop\ImagenesBanner\" />
+    <add key="rutaImagenesArticulos" value="C:\inetpub\wwwroot\eShop\ImagenesArticulos\" />
   </appSettings>
 </configuration>
