--- a/AgroPetWeb/Web.config
+++ b/AgroPetWeb/Web.config
@@ -7,18 +7,20 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    <authentication mode="Windows" />
-    <authorization>
+    <authentication mode="None"/>
+      <!--<forms name=".ASPXFORMS" defaultUrl="index.aspx" loginUrl="index.aspx" requireSSL="false" protection="All" path="/" timeout="30"/>
+    </authentication>-->
+    <!--<authorization>
       <deny users="?" />
-    </authorization>
-    <pages>
+    </authorization>-->
+    <!--<pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
-    </pages>
+    </pages>-->
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -40,8 +42,9 @@
   </system.codedom>
 
   <connectionStrings>
-    <add name="ConnMySQLPruebas" connectionString="User Id=root;Host=localhost;Database=websites;Persist Security Info=True" />
-    <add name="ConnMySQLAgropet" connectionString="User Id=root;Host=localhost;Database=websites;Persist Security Info=True" />
+    <add name="Default" connectionString="Data Source=LENOVO-PC\BORNE;Initial Catalog=websites;User ID=sa;Password=n3f3rt4r10;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="ConnMySQLPruebas" connectionString="User Id=root;Host=localhost;Database=websites;Persist Security Info=True" />
+    <add name="ConnMySQLAgropet" connectionString="User Id=root;Host=localhost;Database=websites;Persist Security Info=True" />-->
   </connectionStrings>    
     
   <appSettings>
