--- a/AgroPetWeb/AgroPetWeb.csproj
+++ b/AgroPetWeb/AgroPetWeb.csproj
@@ -108,6 +108,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="Mascotas\ShopCar.aspx" />
+    <Content Include="Security\Autentica.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -157,6 +159,7 @@
     <Content Include="images\logo2.png" />
     <Content Include="images\pre_nuevo_agropet.JPG" />
     <Content Include="index.aspx" />
+    <Content Include="Security\Logout.aspx" />
     <Content Include="Mascotas\Acuario.aspx" />
     <Content Include="Mascotas\Aves.aspx" />
     <Content Include="Mascotas\Domesticos.aspx" />
@@ -200,6 +203,7 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Security\Registro.aspx" />
     <Content Include="Site.Master" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config">
@@ -227,6 +231,20 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Mascotas\ShopCar.aspx.cs">
+      <DependentUpon>ShopCar.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mascotas\ShopCar.aspx.designer.cs">
+      <DependentUpon>ShopCar.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Security\Autentica.aspx.cs">
+      <DependentUpon>Autentica.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Security\Autentica.aspx.designer.cs">
+      <DependentUpon>Autentica.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -250,6 +268,13 @@
     </Compile>
     <Compile Include="index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Security\Logout.aspx.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Security\Logout.aspx.designer.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
     </Compile>
     <Compile Include="Mascotas\Acuario.aspx.cs">
       <DependentUpon>Acuario.aspx</DependentUpon>
@@ -280,6 +305,13 @@
       <DependentUpon>MasterPet.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\Registro.aspx.cs">
+      <DependentUpon>Registro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Security\Registro.aspx.designer.cs">
+      <DependentUpon>Registro.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
