--- a/AgroPET.Datos/AgroPET.Datos.csproj
+++ b/AgroPET.Datos/AgroPET.Datos.csproj
@@ -40,10 +40,6 @@
     <Reference Include="AgroPET.Entidades">
       <HintPath>..\Agropet.Entidades\bin\Debug\AgroPET.Entidades.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=5.1.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Dll\MySql.Data.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -54,25 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Catalogos\CatalogoDA.cs" />
     <Compile Include="Catalogos\CatalogosExtDA.cs" />
     <Compile Include="Catalogos\DatosArticulos.cs" />
     <Compile Include="Catalogos\DatosCliente.cs" />
     <Compile Include="Catalogos\DatosImagenesArticulos.cs" />
     <Compile Include="Catalogos\DatosImagenesBanners.cs" />
+    <Compile Include="Catalogos\DatosPerfil.cs" />
     <Compile Include="Catalogos\DatosUsuario.cs" />
-    <Compile Include="Comun\ConversionesEntidadesNegocio.cs" />
     <Compile Include="Comun\DatosBase.cs" />
-    <Compile Include="Comun\EjecutaSP.cs" />
-    <Compile Include="Excepciones\SinIDException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seguridad\DatosMenuWeb.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\InterfacesAgroPET\InterfacesAgroPET.csproj">
-      <Project>{370aefe8-aefc-4de3-b2b6-d80ff20054f0}</Project>
-      <Name>InterfacesAgroPET</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Utilidades\Utilidades.csproj">
       <Project>{eda6ee69-04bc-421d-9241-129704d18a8b}</Project>
       <Name>Utilidades</Name>
@@ -80,7 +69,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Dll\AccesoDatos.dll" />
-    <Content Include="Dll\MySql.Data.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
