--- a/Agropet.Entidades/AgroPET.Entidades.csproj
+++ b/Agropet.Entidades/AgroPET.Entidades.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Consultas\ConsultaPerfiles.cs" />
     <Compile Include="Consultas\ConsultaUsuarios.cs" />
     <Compile Include="Consultas\MenuArticulos.cs" />
+    <Compile Include="Especial\EntBuy.cs" />
     <Compile Include="Especial\EntidadBannersWeb.cs" />
     <Compile Include="Especial\EntidadDDLUC.cs" />
     <Compile Include="Especial\EntidadResultProceso.cs" />
@@ -68,6 +69,7 @@
     <Compile Include="Seguridad\EntidadPerfiles.cs" />
     <Compile Include="Seguridad\EntidadUsuario.cs" />
     <Compile Include="Seguridad\EntidadUsuarioLogeado.cs" />
+    <Compile Include="Seguridad\EntUser.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
