--- a/AdminAgropet/Web.config
+++ b/AdminAgropet/Web.config
@@ -37,7 +37,7 @@
     </system.web>
   </location>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=DESKTOP-8EK5U5C\SQLEXPRESS;Initial Catalog=Petcetera;User ID=sa;Password=admin;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Data Source=DESKTOP-8EK5U5C\SQLEXPRESS;Initial Catalog=Petcetera;User ID=sa;Password=admin;Integrated Security=False;" providerName="System.Data.SqlClient" />
     <!--<add name="Default" connectionString="Data Source=192.168.1.12;Initial Catalog=Petcetera;User ID=AGROPET\ali.escamilla;Password=3sc4m1ll4;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
