--- a/AgroPetWeb/Web.config
+++ b/AgroPetWeb/Web.config
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
-    <authentication mode="None" />
-      <!--<forms name=".ASPXFORMS" defaultUrl="index.aspx" loginUrl="index.aspx" requireSSL="false" protection="All" path="/" timeout="30"/>
+    <compilation debug="true" targetFramework="4.0"/>
+    <httpRuntime/>
+    <authentication mode="None"/>
+    <!--<forms name=".ASPXFORMS" defaultUrl="index.aspx" loginUrl="index.aspx" requireSSL="false" protection="All" path="/" timeout="30"/>
     </authentication>-->
     <!--<authorization>
       <deny users="?" />
@@ -25,30 +25,28 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed"/>
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" culture="neutral" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <assemblyIdentity name="WebGrease" culture="neutral" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <system.codedom>
+  <!--<system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
-  </system.codedom>
-
+  </system.codedom>-->
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=LENOVO-PC\BORNE;Initial Catalog=websites;User ID=sa;Password=n3f3rt4r10;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Data Source=LENOVO-PC\BORNE;Initial Catalog=websites;User ID=sa;Password=n3f3rt4r10;Integrated Security=True;" providerName="System.Data.SqlClient"/>
     <!--<add name="ConnMySQLPruebas" connectionString="User Id=root;Host=localhost;Database=websites;Persist Security Info=True" />
     <add name="ConnMySQLAgropet" connectionString="User Id=root;Host=localhost;Database=websites;Persist Security Info=True" />-->
-  </connectionStrings>    
-    
+  </connectionStrings>
   <appSettings>
-    <add key="rutaImagenesBanners" value="ImagenesBanner\" />
-    <add key="rutaImagenesArticulos" value="ImagenesArticulos\" />
+    <add key="rutaImagenesBanners" value="ImagenesBanner\"/>
+    <add key="rutaImagenesArticulos" value="ImagenesArticulos\"/>
   </appSettings>
 </configuration>
