--- a/AdminAgropet/Web.config
+++ b/AdminAgropet/Web.config
@@ -38,7 +38,7 @@
   </location>
   <connectionStrings>
     <add name="Default" connectionString="Data Source=DESKTOP-8EK5U5C\SQLEXPRESS;Initial Catalog=Petcetera;User ID=sa;Password=admin;Integrated Security=False;" providerName="System.Data.SqlClient" />
-    <!--<add name="Default" connectionString="Data Source=192.168.1.12;Initial Catalog=Petcetera;User ID=AGROPET\ali.escamilla;Password=3sc4m1ll4;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="Default" connectionString="Data Source=192.168.1.12;Initial Catalog=Petcetera;User ID=ali.escamilla;Password=Proyectoweb2017;Integrated Security=False;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="rutaImagenesBanners" value="C:\Temporal\Repositorio\ImagenesBanner\"/>
